// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`approval and plan keep a usable composer at 110x32: approval 1`] = `
"Waiting for approval · Edit file                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
  rottweiler                                                                                                  
  Workspace · not loaded                                                                                      
  Instructions · not loaded                                                                                   
  MCP · not loaded                                                                                            
  Skill commands · not loaded                                                                                 
  Model · Choose a model · /models · /providers to connect                                                    
  Describe a task, or press / for commands.                                                                   
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
╭─ Permission · y once / a session / n deny · Tab to message ────────────────────────────────────────────────╮
│ Edit file src/main.rs                                                                                      │
│ Apply the reviewed correction                                                                              │
│  ▶ Allow once                                                                                              │
│    Run only this invocation                                                                                │
│    Allow session                                                                                           │
│    Remember for this session                                                                               │
│    Allow project                                                                                           │
│    Remember this exact invocation in this project                                                          │
│    Review a permission rule…                                                                               │
│    Review an explicit session pattern                                                                      │
╰────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
 ╭──────────────────────────────────────────────────────────────────────────────────────────────────────────╮ 
 │ Please keep the public API compatible.                                                                   │ 
 │ Tab decision/message · Enter choose · Ctrl+P commands                                                    │ 
 ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────╯ 
  EXECUTE   model not selected · Alt+M  approval · Edit file    ctx —  $—  —                                  
"
`;

exports[`approval and plan keep a usable composer at 110x32: plan 1`] = `
"                                                                                                              
                                                                                                              
                                                                                                              
  rottweiler                                                                                                  
  Workspace · not loaded                                                                                      
  Instructions · not loaded                                                                                   
  MCP · not loaded                                                                                            
  Skill commands · not loaded                                                                                 
  Model · Choose a model · /models · /providers to connect                                                    
  Describe a task, or press / for commands.                                                                   
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
╭─ Plan approval required ───────────────────────────────────────────────────────────────────────────────────╮
│ Fix the request boundary · PgUp/PgDn to review                                                             │
│ Keep the public API compatible.                                                                            │
│ 1. Validate request inputs                                                                                 │
│    Files: src/main.rs                                                                                      │
│    Verify: cargo test                                                                                      │
│ Open questions                                                                                             │
│ • Should empty requests be rejected?                                                                       │
│  ▶ Approve plan                                                                                            │
│    Pin this artifact and enter Execute                                                                     │
│    Reject plan                                                                                             │
│    Stay in Plan mode                                                                                       │
╰────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
 ╭──────────────────────────────────────────────────────────────────────────────────────────────────────────╮ 
 │ Please keep the public API compatible.                                                                   │ 
 │ Tab decision/message · Enter choose · Ctrl+P commands                                                    │ 
 ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────╯ 
  PLAN   model not selected · Alt+M                                                                           
"
`;

exports[`approval and plan keep a usable composer at 80x24: approval 1`] = `
"Waiting for approval · Edit file                                                
  Workspace · not loaded                                                        
  Instructions · not loaded                                                     
  MCP · not loaded                                                              
  Skill commands · not loaded                                                  █
  Model · Choose a model · /models · /providers to connect                     █
  Describe a task, or press / for commands.                                    █
╭─ Permission · y once / a session / n deny · Tab to message ──────────────────╮
│ Edit file src/main.rs                                                        │
│ Apply the reviewed correction                                                │
│  ▶ Allow once                                                                │
│    Run only this invocation                                                  │
│    Allow session                                                             │
│    Remember for this session                                                 │
│    Allow project                                                             │
│    Remember this exact invocation in this project                            │
│    Review a permission rule…                                                 │
│    Review an explicit session pattern                                        │
╰──────────────────────────────────────────────────────────────────────────────╯
 ╭────────────────────────────────────────────────────────────────────────────╮ 
 │ Please keep the public API compatible.                                     │ 
 │ Tab decision/message · Enter choose · Ctrl+P commands                      │ 
 ╰────────────────────────────────────────────────────────────────────────────╯ 
  EXECUTE   model not selected · Alt+M  approval · Edit file    ctx —  $—  —    
"
`;

exports[`approval and plan keep a usable composer at 80x24: plan 1`] = `
"  Workspace · not loaded                                                        
  Instructions · not loaded                                                     
  MCP · not loaded                                                              
  Skill commands · not loaded                                                  █
  Model · Choose a model · /models · /providers to connect                     █
  Describe a task, or press / for commands.                                    █
╭─ Plan approval required ─────────────────────────────────────────────────────╮
│ Fix the request boundary · PgUp/PgDn to review                               │
│ Keep the public API compatible.                                              │
│ 1. Validate request inputs                                                   │
│    Files: src/main.rs                                                        │
│    Verify: cargo test                                                        │
│ Open questions                                                               │
│ • Should empty requests be rejected?                                         │
│  ▶ Approve plan                                                              │
│    Pin this artifact and enter Execute                                       │
│    Reject plan                                                               │
│    Stay in Plan mode                                                         │
╰──────────────────────────────────────────────────────────────────────────────╯
 ╭────────────────────────────────────────────────────────────────────────────╮ 
 │ Please keep the public API compatible.                                     │ 
 │ Tab decision/message · Enter choose · Ctrl+P commands                      │ 
 ╰────────────────────────────────────────────────────────────────────────────╯ 
  PLAN   model not selected · Alt+M                                             
"
`;
